data/all_generated_tests/raw_wast_tests/nop_InfiniteLoops_307.wast
;; 8. **Validation of Loops with Nop and Unreachable Code Path**:    - Design a loop containing `nop` instructions followed by an `unreachable` instruction to simulate conditional break paths. This will ensure `wizard_engine` does not misinterpret `nop` leading to infinite loops.    - Constraint: Loop should break on `unreachable`, and `nop` should not interfere.

(assert_invalid
  (module
    (func $test_loop
      (loop $l
        nop
        unreachable
        br $l
      )
    )
  )
  "unreachable code"
)